Atualizando site Rosa Selvagem

--- a/índex.html
+++ b/índex.html
@@ -4,97 +4,43 @@
   <meta charset="UTF-8">
   <title>Rosa Selvagem</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #f7f2f4;
-      color: #333;
-    }
-
-    header {
-      background-color: #d9a7b0;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 36px;
-      color: #fff;
-    }
-
-    header p {
-      margin-top: 10px;
-      color: #fff;
-      font-size: 18px;
-    }
-
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    .card {
-      background: #fff;
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    .card h2 {
-      color: #d36c82;
-      margin-top: 0;
-    }
-
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-    }
+    body { margin:0; font-family:Arial, Helvetica, sans-serif; background:#f7f2f4; }
+    header { background:#d9a7b0; padding:40px 20px; text-align:center; }
+    header h1 { color:#fff; margin:0; }
+    header p { color:#fff; }
+    section { max-width:1000px; margin:auto; padding:40px 20px; }
+    .card { background:#fff; padding:20px; margin-bottom:20px; border-radius:10px; }
+    footer { background:#333; color:#fff; text-align:center; padding:20px; }
   </style>
 </head>
-
 <body>
 
-  <header>
-    <h1>Rosa Selvagem</h1>
-    <p>Beleza, atitude e estilo</p>
-  </header>
+<header>
+  <h1>Rosa Selvagem</h1>
+  <p>Beleza, atitude e estilo</p>
+</header>
 
-  <section>
-    <div class="card">
-      <h2>Sobre nós</h2>
-      <p>
-        Aqui você pode escrever sobre a Rosa Selvagem.
-        Fale da sua marca, da sua ideia ou do que você vende.
-      </p>
-    </div>
+<section>
+  <div class="card">
+    <h2>Sobre nós</h2>
+    <p>Escreva aqui sobre sua marca.</p>
+  </div>
 
-    <div class="card">
-      <h2>Modelos</h2>
-      <p>
-        Em breve nossos modelos estarão disponíveis.
-      </p>
-    </div>
+  <div class="card">
+    <h2>Modelos</h2>
+    <p>Em breve nossos modelos.</p>
+  </div>
 
-    <div class="card">
-      <h2>Contato</h2>
-      <p>
-        Instagram: @rosaselvagem<br>
-        WhatsApp: (00) 00000-0000
-      </p>
-    </div>
-  </section>
+  <div class="card">
+    <h2>Contato</h2>
+    <p>Instagram e WhatsApp aqui.</p>
+  </div>
+</section>
 
-  <footer>
-    © 2026 Rosa Selvagem — Todos os direitos reservados
-  </footer>
+<footer>
+  © 2026 Rosa Selvagem
+</footer>
 
 </body>
 </html>
