Teste atualização site
Removed style and footer sections, updated header and added success message.

--- a/índex.html
+++ b/índex.html
@@ -4,43 +4,11 @@
   <meta charset="UTF-8">
   <title>Rosa Selvagem</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body { margin:0; font-family:Arial, Helvetica, sans-serif; background:#f7f2f4; }
-    header { background:#d9a7b0; padding:40px 20px; text-align:center; }
-    header h1 { color:#fff; margin:0; }
-    header p { color:#fff; }
-    section { max-width:1000px; margin:auto; padding:40px 20px; }
-    .card { background:#fff; padding:20px; margin-bottom:20px; border-radius:10px; }
-    footer { background:#333; color:#fff; text-align:center; padding:20px; }
-  </style>
 </head>
 <body>
 
-<header>
-  <h1>Rosa Selvagem</h1>
-  <p>Beleza, atitude e estilo</p>
-</header>
-
-<section>
-  <div class="card">
-    <h2>Sobre nós</h2>
-    <p>Escreva aqui sobre sua marca.</p>
-  </div>
-
-  <div class="card">
-    <h2>Modelos</h2>
-    <p>Em breve nossos modelos.</p>
-  </div>
-
-  <div class="card">
-    <h2>Contato</h2>
-    <p>Instagram e WhatsApp aqui.</p>
-  </div>
-</section>
-
-<footer>
-  © 2026 Rosa Selvagem
-</footer>
+<h1>Rosa Selvagem</h1>
+<p>Site atualizado com sucesso 🌸</p>
 
 </body>
 </html>
